--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,61 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  width: 100vh;
+  height: 100vh;
+  background-image: linear-gradient(pink, white);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App {
+  width: 100%;
+  
+}
+.App .column {
+  width: 30%;
+}
+
+.droppable-col {
+  width: 100%;
+  background-color: rgb(209, 143, 209);
+  padding: 10px 10px 0 10px;
+  border-radius: 7px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.item {
+  margin-bottom: 10px;
+  background-color: rgb(209, 143, 209);
   color: white;
+  border: 1px solid white;
+  padding: 5px;
+  border-radius: 7px;
 }
 
-.App-link {
-  color: #61dafb;
+.item.dragging {
+  background-color: coral;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.columns{
+  display: inline-block;
+}
+
+.inputs{
+  margin: 50px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  height: 40px;
+}
+input{
+  border-radius: 30px;
+  border: none;
+}
+button{
+  border-radius: 30px;
 }
